--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fallguys-shop",
   "version": "0.1.0",
   "private": true,
+	"homepage": "http://ghidalgo93.github.io/poke-shop", 
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject", 
+		"predeploy": "npm run build", 
+		"deploy": "gh-pages -d build" 
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +50,7 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   }
 }
